examples/neg/must_box_resume.effekt
module must_box_resume

effect exc(): Nothing
def foo() = try {
  <>
} with e: exc { resume }